--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Little Lemon Restaurant" />
+    <meta name="og:title" content="Little Lemon Restaurant" />
+    <meta name="og:description" content="Little Lemon Restaurant" />
+    <meta name="og:image" content="/Logo.svg" />
+    <title>Little Lemon - Website</title>
   </head>
   <body>
     <div id="root"></div>
